<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/white"
    android:baselineAligned="false">

    <TextView
        android:id="@+id/habit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Example habit name"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/mon_box"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/mon"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/day_box"
        android:layout_below="@id/habit_name"
        android:layout_marginRight="5dp"
        android:textColor="@color/lightgray"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tue_box"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/tue"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/day_box"
        android:layout_below="@id/habit_name"
        android:layout_toRightOf="@+id/mon_box"
        android:layout_marginRight="5dp"
        android:textColor="@color/lightgray"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wed_box"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/day_box"
        android:layout_below="@id/habit_name"
        android:layout_toRightOf="@+id/tue_box"
        android:layout_marginRight="5dp"
        android:textColor="@color/lightgray"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thu_box"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/thu"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/day_box"
        android:layout_below="@id/habit_name"
        android:layout_toRightOf="@+id/wed_box"
        android:layout_marginRight="5dp"
        android:textColor="@color/lightgray"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fri_box"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/fri"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/day_box"
        android:layout_below="@id/habit_name"
        android:layout_toRightOf="@+id/thu_box"
        android:layout_marginRight="5dp"
        android:textColor="@color/lightgray"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sat_box"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/sat"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/day_box"
        android:layout_below="@id/habit_name"
        android:layout_toRightOf="@+id/fri_box"
        android:layout_marginRight="5dp"
        android:textColor="@color/lightgray"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sun_box"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/sun"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/day_box"
        android:layout_below="@id/habit_name"
        android:layout_toRightOf="@+id/sat_box"
        android:textColor="@color/lightgray"
        android:textSize="11sp"
        android:textStyle="bold" />


</RelativeLayout>