<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/white"
    tools:context="com.example.habitup.View.EditHabitActivity">

    <TextView
        android:id="@+id/habit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:labelFor="@+id/habit_name"
        android:text="@string/habit_label"
        android:textSize="16sp"
        android:textColor="@color/teal"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/habit_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/text_input"
        android:hint="@string/habit_hint"
        android:textColorHint="@color/lightgray"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/habit_label"
        android:singleLine="true"
        android:inputType="textFilter"
        android:maxLength="20"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/reason_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/habit_name"
        app:layout_constraintLeft_toLeftOf="@+id/habit_reason"
        android:text="@string/reason_label"
        android:textSize="16sp"
        android:textColor="@color/teal"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/habit_reason"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/text_input"
        android:hint="@string/reason_hint"
        android:textColorHint="@color/lightgray"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/reason_label"
        android:singleLine="true"
        android:inputType="textFilter"
        android:maxLength="30"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <LinearLayout
        android:id="@+id/date_attr_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/habit_reason"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:text="@string/habit_date_label"
            android:textSize="16sp"
            android:textColor="@color/teal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/attr_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:text="@string/habit_attr_label"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textColor="@color/teal"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_attribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@+id/date_attr_labels">

        <TextView
            android:id="@+id/date_text"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:text="Current date"
            android:textSize="15sp"
            android:textColor="@color/darkgray"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:background="@color/whitegray"
            tools:layout_editor_absoluteY="246dp" />

        <ImageView
            android:id="@+id/habit_date_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_calendar"
            android:background="@color/lightgray"
            android:layout_gravity="center"
            android:contentDescription="Date picker calendar"
            android:tint="@color/white"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@color/whitegray"
            android:layout_marginStart="8dp">

            <Spinner
                android:id="@+id/habit_attr_spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/schedule_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_sched_label"
        app:layout_constraintTop_toBottomOf="@+id/date_attribute"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/teal"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/schedule_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/GreenCheckBox" />
            <CheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/GreenCheckBox"/>
            <CheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/GreenCheckBox"/>
            <CheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/GreenCheckBox"/>
            <CheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/GreenCheckBox"/>
            <CheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/GreenCheckBox"/>
            <CheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/GreenCheckBox"/>
            <CheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_edit_habit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule" />


</android.support.constraint.ConstraintLayout>

